// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auth reducer should CONFIRM_FORGOT_PASSWORD_FULFILLED 1`] = `
Object {
  "errorMessage": "",
  "isError": false,
  "isLoggedIn": false,
  "isPasswordConfirmed": true,
  "isPending": false,
}
`;

exports[`auth reducer should CONFIRM_FORGOT_PASSWORD_PENDING 1`] = `
Object {
  "errorMessage": "",
  "isError": false,
  "isLoggedIn": false,
  "isPasswordConfirmed": false,
  "isPending": true,
}
`;

exports[`auth reducer should CONFIRM_FORGOT_PASSWORD_REJECTED 1`] = `
Object {
  "errorMessage": "error",
  "isError": true,
  "isLoggedIn": false,
  "isPending": false,
}
`;

exports[`auth reducer should FORGOT_PASSWORD_FULFILLED 1`] = `
Object {
  "errorMessage": "",
  "isError": false,
  "isLoggedIn": false,
  "isPending": false,
}
`;

exports[`auth reducer should FORGOT_PASSWORD_PENDING 1`] = `
Object {
  "errorMessage": "",
  "isError": false,
  "isLoggedIn": false,
  "isPending": true,
}
`;

exports[`auth reducer should FORGOT_PASSWORD_REJECTED 1`] = `
Object {
  "errorMessage": "error",
  "isError": true,
  "isLoggedIn": false,
  "isPending": false,
}
`;

exports[`auth reducer should LOGIN_USER_FULFILLED 1`] = `
Object {
  "errorMessage": "",
  "isError": false,
  "isLoggedIn": true,
  "isPending": false,
}
`;

exports[`auth reducer should LOGIN_USER_PENDING 1`] = `
Object {
  "errorMessage": "",
  "isError": false,
  "isLoggedIn": false,
  "isPending": true,
}
`;

exports[`auth reducer should LOGIN_USER_REJECTED 1`] = `
Object {
  "errorMessage": "test",
  "isError": true,
  "isLoggedIn": false,
  "isPending": false,
}
`;

exports[`auth reducer should LOGOUT_USER_PENDING 1`] = `
Object {
  "errorMessage": "",
  "isError": false,
  "isLoggedIn": false,
  "isPasswordConfirmed": false,
  "isPasswordVerified": false,
  "isPending": false,
}
`;

exports[`auth reducer should VERIFY_FORGOT_PASSWORD_FULFILLED 1`] = `
Object {
  "errorMessage": "",
  "isError": false,
  "isLoggedIn": false,
  "isPasswordVerified": true,
  "isPending": false,
}
`;

exports[`auth reducer should VERIFY_FORGOT_PASSWORD_PENDING 1`] = `
Object {
  "errorMessage": "",
  "isError": false,
  "isLoggedIn": false,
  "isPasswordVerified": false,
  "isPending": true,
}
`;

exports[`auth reducer should VERIFY_FORGOT_PASSWORD_REJECTED 1`] = `
Object {
  "errorMessage": "error",
  "isError": true,
  "isLoggedIn": false,
  "isPending": false,
}
`;

exports[`auth reducer should return the initial state 1`] = `
Object {
  "errorMessage": "",
  "isError": false,
  "isLoggedIn": false,
  "isPasswordConfirmed": false,
  "isPasswordVerified": false,
  "isPending": false,
}
`;
